--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <img src="images/Group 97.png" style="width: 100%;">
         <div class="head-container">
             <div class="logo-div">
                 <img src="images/image 24.png" alt="Logo Image" id="logo">
